Fix admin auth headers and add missing routes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1237,6 +1237,22 @@
             : 'https://fedex-clone-educational.onrender.com';
         console.log('API Configured to:', API_BASE_URL);
 
+        // Helper to get auth headers with Firebase token
+        async function getAuthHeaders() {
+            if (!window.firebaseAuth) return { 'Content-Type': 'application/json' };
+            const { auth } = window.firebaseAuth;
+            const headers = { 'Content-Type': 'application/json' };
+            if (auth && auth.currentUser) {
+                try {
+                    const token = await auth.currentUser.getIdToken(true);
+                    headers['Authorization'] = `Bearer ${token}`;
+                } catch (e) {
+                    console.error("Could not get auth token:", e);
+                }
+            }
+            return headers;
+        }
+
         let isLoggedIn = false;
         let isAdmin = false;
         let currentUser = null;
@@ -2191,7 +2207,8 @@
             tbody.innerHTML = '<tr><td colspan="5" class="text-center p-4">Loading...</td></tr>';
 
             try {
-                const response = await fetch(`${API_BASE_URL}/api/packages`);
+                const headers = await getAuthHeaders();
+                const response = await fetch(`${API_BASE_URL}/api/packages`, { headers });
                 allShipmentsData = await response.json();
                 
                 tbody.innerHTML = '';
@@ -2347,6 +2364,19 @@
             document.getElementById('selectAllShipments').checked = false;
             updateBulkDeleteButton();
             renderAdminTable();
+        }
+
+        function downloadCsvTemplate() {
+            const headers = "Tracking ID,Status,Service,Destination,Weight";
+            const example = "123456789012,in_transit,FedEx Ground,New York NY,5.0 lbs";
+            const csvContent = "data:text/csv;charset=utf-8," + headers + "\n" + example;
+            const encodedUri = encodeURI(csvContent);
+            const link = document.createElement("a");
+            link.setAttribute("href", encodedUri);
+            link.setAttribute("download", "shipment_template.csv");
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
         }
 
         async function duplicateShipment(id) {
